@@ -2,6 +2,7 @@ version 2024c, in progress
 - Append data via GUI: support the fixed-sample option
 - Fix bug: append via console not updating series list in the
   main gretl window
+- GUI: support the --by option for the "summary" command
 
 2024-05-21 version 2024b
 - "gridplot" command: add a --title option
